poll/server/strip-api-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: poll
spec:
  stripPrefix:
    prefixes:
      - /api
