poll/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-client
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: poll-client
