poll/server/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: poll-server

spec:
  entryPoints:
    - websecure
  tls:
    secretName: poll-tls
  routes:
    - kind: Rule
      match: Host(`poll.trap.jp`) && (PathPrefix(`/api/`))
      middlewares:
        - name: auth-trap-jp-hard
          namespace: auth
        - name: strip-api-prefix
          namespace: poll
      services:
        - namespace: poll
          kind: Service
          name: poll-server
          port: 3000
          scheme: http
          weight: 1
